feat: add iOS RoboVM view module with branded UI
- New br.com.wdc.shopping.view.robovm module (MobiVM/RoboVM 2.3.24)
- All screens: Login, Home, Products, Product, Cart, Receipt
- Visual design: navy header, doodle background pattern, white cards
- Consistent styling across all inner screens
- Empty cart state with 'Vamos às compras!?' message
- Success banner with solid white background for readability
- HttpTransport abstraction for RoboVM compatibility
- Build scripts and robovm-compat Maven profile